:memo: update docs
