# docs/swagger.json
@@ -79,8 +79,8 @@
                         "required": true
                     },
                     {
-                        "description": "Senha Nova",
-                        "name": "senha_nova",
+                        "description": "Senha",
+                        "name": "senha",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -259,15 +259,6 @@
                     {
                         "description": "Ordem de Redirecionamento",
                         "name": "ordem_de_redirecionamento",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Nome de Usuário",
-                        "name": "nome_de_usuario",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -773,6 +764,52 @@
                 }
             }
         },
+        "/to/:hash": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Redirecionadores"
+                ],
+                "summary": "Retorna os links selecionados daquele redirecionador",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Código Hash",
+                        "name": "hash",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Link"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/u/:username": {
             "get": {
                 "consumes": [
@@ -799,106 +836,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/Usuario"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/echo.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/echo.HTTPError"
-                        }
-                    }
-                }
-            },
-            "patch": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Usuários"
-                ],
-                "summary": "Atualiza um usuário",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Nome de Usuário",
-                        "name": "username",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "CPF",
-                        "name": "cpf",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Nome",
-                        "name": "nome",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Nome de Usuário",
-                        "name": "nome_de_usuario",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Email",
-                        "name": "email",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Senha",
-                        "name": "senha",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Data de Nascimento",
-                        "name": "data_de_nascimento",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Plano de Assinatura",
-                        "name": "plano_de_assinatura",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
                         }
                     },
                     "400": {
@@ -1065,6 +1002,12 @@
                             "$ref": "#/definitions/echo.HTTPError"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -1094,18 +1037,6 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/echo.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/echo.HTTPError"
                         }
                     }
                 }
@@ -1171,7 +1102,7 @@
                 "id": {
                     "type": "integer"
                 },
-                "limite_links_mensal": {
+                "limite_links": {
                     "type": "integer"
                 },
                 "nome": {
@@ -1183,7 +1114,7 @@
                 "removido_em": {
                     "type": "integer"
                 },
-                "valor_mensal": {
+                "valor": {
                     "type": "integer"
                 }
             }
@@ -1245,7 +1176,7 @@
                     "type": "string"
                 },
                 "plano_de_assinatura": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "removido_em": {
                     "type": "string"
